# shock_cooling_curve

./: .gitignore  Double-peaked light curves.md  Fitting Instructions.md  LICENSE  README.md  pyproject.toml  requirements.txt  test.py  tutorial.ipynb  tutorial_local.ipynb
Notebooks/: research notes.ipynb  testing.ipynb
data/1993J/: PIRO_2015_results.csv  PIRO_2020_results.csv  SW_BSG_results.csv  SW_RSG_results.csv  config.ini  reduced_data.csv  sn1993J + PIRO_2015.txt  sn1993J + PIRO_2020.txt  sn1993J + SW_BSG.txt  sn1993J + SW_RSG.txt  sn1993J_phot.csv
data/2011dh/: PIRO_2015_results.csv  PIRO_2020_results.csv  SW_BSG_results.csv  SW_RSG_results.csv  apjl408829t1_mrt.txt  config.ini  reduced_data.csv  sn2011dh + PIRO_2015.txt  sn2011dh + PIRO_2020.txt  sn2011dh + SW_BSG.txt  sn2011dh + SW_RSG.txt  sn2011dh_phot.csv
data/2011fu/: PIRO_2015_results.csv  PIRO_2020_results.csv  SW_BSG_results.csv  SW_RSG_results.csv  config.ini  reduced_data.csv  sn2011fu + PIRO_2015.txt  sn2011fu + PIRO_2020.txt  sn2011fu + SW_BSG.txt  sn2011fu + SW_RSG.txt  sn2011fu_phot + PIRO_2015.txt  sn2011fu_phot + PIRO_2020.txt  sn2011fu_phot + SW_BSG.txt  sn2011fu_phot + SW_RSG.txt  sn2011fu_phot.csv
data/2013df/: 2013df + PIRO_2015.txt  2013df + PIRO_2020.txt  2013df + SW_BSG.txt  2013df + SW_RSG.txt  2013df_phot.csv  PIRO_2015_results.csv  PIRO_2020_results.csv  SW_BSG_results.csv  SW_RSG_results.csv  config.ini  reduced_data.csv
data/2016gkg/: PIRO_2015_results.csv  PIRO_2020_results.csv  SW_BSG_results.csv  SW_RSG_results.csv  config.ini  reduced_data.csv  sn2016gkg + PIRO_2015.txt  sn2016gkg + PIRO_2020.txt  sn2016gkg + SW_BSG.txt  sn2016gkg + SW_RSG.txt  sn2016gkg_phot.csv
data/2019dge/: PIRO_2015_results.csv  PIRO_2020_results.csv  SW_BSG_results.csv  SW_RSG_results.csv  config.ini  reduced_data.csv  sn2019dge + PIRO_2015.txt  sn2019dge + PIRO_2020.txt  sn2019dge + SW_BSG.txt  sn2019dge + SW_RSG.txt  sn2019dge_phot.csv
data/2019hvg/: PIRO_2020_results.csv  SW_BSG_results.csv  SW_RSG_results.csv  config.ini  reduced_data.csv  sn2019hvg + PIRO_2020.txt  sn2019hvg + SW_BSG.txt  sn2019hvg + SW_RSG.txt  sn2019hvg_phot.csv
data/2020bvc/: PIRO_2015_results.csv  PIRO_2020_results.csv  SW_BSG_results.csv  SW_RSG_results.csv  config.ini  reduced_data.csv  sn2020bvc + PIRO_2015.txt  sn2020bvc + PIRO_2020.txt  sn2020bvc + SW_BSG.txt  sn2020bvc + SW_RSG.txt  sn2020bvc_phot + SW_RSG.txt  sn2020bvc_phot.csv
data/2021gno/: PIRO_2015_results.csv  PIRO_2020_results.csv  SW_BSG_results.csv  SW_RSG_results.csv  Sapir & Waxman [n = 3]_results.csv  config.ini  re_swbsg.csv  (+8 more)
example_data/: config.ini  sn2021gno_phot.csv
other/: plots.ipynb
shock_cooling_curve/: fitter.py  plotter.py  supernova.py
templates/: config_template.ini  phot_template.csv
tests/: test.py
(+51 files in other folders)
