[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shock_cooling_curve"
version = "0.0.4"
dependencies = [
    'importlib-metadata >= 1.0 ; python_version < "3.8"',
    'numpy',
    'scipy',
    'matplotlib',
    'pysynphot',
    'configparser',
    'regex',
    'corner',
    'pandas',
    'extinction',
    'IPython',
    'emcee'
]
description = "A python module used to model the shock cooling emission from double-peaked supernovae."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["core collapse supernovae", "shock cooling emission", "double peaked lightcurves",
    "non-linear least squares fitting", "MCMC sampling"
]

license = {text = "MIT License"}
authors = [
    {name = "Padma Venkatraman", email = "vpadma@berkeley.edu"},
    {name = "Wynn Jacabson Galan", email = "wynnjg@berkeley.edu"}
]

maintainers = [
  {name = "Padma Venkatraman", email = "vpadma@berkeley.edu"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows'
]

[project.urls]
Repository = "https://github.com/padma18-vb/shock-cooling"


[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
shock_cooling_curve = ["*.csv"]
"shock_cooling_curve.filters" = ["**/*.dat"]



